fixed line spacing on landing page - Landing Page & Navbar components complete

--- a/my-app/src/Landing.css
+++ b/my-app/src/Landing.css
@@ -4,92 +4,80 @@
 
 
 
-.Landing{
+.Landing {
   display: flex;
   background-color: #1a191d;
-  height:100vh;
-  width:100vw;   
+  height: 100vh;
+  width: 100vw;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  
-line-height: 10px;
+
+  line-height: 15px;
 
 
-  
+
 }
 
 
 
-#opaque{
-opacity: 0.7;
-font-family: 'Roboto Condensed', sans-serif;
+#opaque {
+  opacity: 0.7;
+  font-family: 'Roboto Condensed', sans-serif;
 }
 
-#small{
+#small {
   position: relative;
   top: 25px;
   font-size: 2em;
   font-family: 'Roboto', sans-serif;
 }
 
-a {
-	color:white;
-	  }
-
-	  
-	  
-	  /* =======================================
-	  The juicy stuff
-	  ======================================= */
-	  
-	
 
 
 p {
-    color:white;
-    font-size: 5.5em;
-    font-family: 'Roboto Condensed', sans-serif;
+  color: white;
+  font-size: 5em;
+  font-family: 'Roboto Condensed', sans-serif;
 
 }
 
 
 
 .btn {
-	position: relative;
-	display: inline-block;
-	width: 210px;
-	height: 60px;
-	font-size: 23px;
-	line-height: 50px;
-	text-align: center;
-	text-transform: uppercase;
-	color: #ffffff;
-	cursor: pointer;
-	overflow: hidden;
-  
-  }
-  
-  .btn svg {
-	position: absolute;
-	top: 0;
-	left: 0;
-  }
-  
-  .btn svg rect {
-	stroke: #ffffff;
-	stroke-width: 6;
-	stroke-dasharray: 422, 0;
-	stroke-dashoffset: 0;
-	-webkit-transition: all 900ms cubic-bezier(0.19, 1, 0.22, 1);
-	-moz-transition: all 900ms cubic-bezier(0.19, 1, 0.22, 1);
-	transition: all 900ms cubic-bezier(0.19, 1, 0.22, 1);
-  }
-  
-  .btn:hover svg rect {
-	stroke-width: 10;
-	stroke-dasharray: 110, 312;
-	stroke-dashoffset: 183;
-  }
+  top:-20px;
+  position: relative;
+  display: inline-block;
+  width: 210px;
+  height: 60px;
+  font-size: 23px;
+  line-height: 50px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #ffffff;
+  cursor: pointer;
+  overflow: hidden;
 
+}
 
+.btn svg {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.btn svg rect {
+  stroke: #ffffff;
+  stroke-width: 6;
+  stroke-dasharray: 422, 0;
+  stroke-dashoffset: 0;
+  -webkit-transition: all 900ms cubic-bezier(0.19, 1, 0.22, 1);
+  -moz-transition: all 900ms cubic-bezier(0.19, 1, 0.22, 1);
+  transition: all 900ms cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+.btn:hover svg rect {
+  stroke-width: 10;
+  stroke-dasharray: 110, 312;
+  stroke-dashoffset: 183;
+}
